--- a/src/components/ItemDetailConteiner/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetailConteiner/ItemDetail/ItemDetail.css
@@ -1,3 +1,7 @@
+.conteiner-detail{
+    padding: 5rem;
+}
+
 .detail{
     display: flex;
     gap: 2rem;
@@ -6,4 +10,74 @@
 
 .detail-img{
     width: 50%;
+}
+
+.conteiner-detalle{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.producto-precio{
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.conteiner-button{
+    display: flex;
+    gap: 1rem;
+}
+
+.ver-carrito{
+    border-radius: 5px;
+    border: none;
+    background-color: #000;
+    color: #fff;
+    padding: 0.5rem;
+}
+
+.volver-inicio{
+    border-radius: 5px;
+    border: none;
+    background-color: #000;
+    color: #fff;
+    padding: 0.5rem;
+}
+
+.conteiner-talla{
+    gap: 0.5rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.titutlo-talle{
+    font-size: 18px;
+}
+
+.talle-linea{
+    display: flex;
+    gap: 1rem;
+}
+
+.talla{
+    background-color: #fff;
+    color: #181818;
+    border-radius: 5px;
+    width: 4rem;
+    height: 4rem;
+    padding: 0.4rem;
+    border: 1px solid #181818;
+}
+
+.talla:hover{
+    background-color: #181818;
+    color: #fff;
+}
+
+.talla span{
+    font-size: 20px;
+    display: flex;
+    padding-top: 0.5rem;
+    justify-content: center;
 }
